--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,18 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-button {
+  background-color: #61dafb;
+  border-width: 0;
+  border-radius: 20px;
+  padding: 1rem 2rem;
+  font-size: x-large;
+  margin: 2rem;
+  cursor: pointer;
+}
+
+.App-button:hover {
+  background-color: #9ae8fd;
 }
 
 @keyframes App-logo-spin {
