--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -54,9 +54,9 @@ button {
   border-radius: 4px;
   padding: 0.75rem;
   font-size: x-large;
-  margin: 1rem 0;
+  margin: 1.5rem 0;
   cursor: pointer;
-  width: 100%;
+  width: 40vw;
 }
 
 button:hover {
